<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura"
            android:gravity="center"
            android:text="@string/main_TextView_escolha"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:background="@android:color/holo_orange_dark" />

        <Button
            android:id="@+id/button_textView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura"

            android:clickable="true"
            android:onClick="selecionar"
            android:text="@string/main_button_textView" />

        <Button
            android:id="@+id/button_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura"

            android:clickable="true"
            android:onClick="selecionar"
            android:text="@string/main_button_button" />

        <Button
            android:id="@+id/button_checkBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura"

            android:clickable="true"
            android:onClick="selecionar"
            android:text="@string/main_button_checkBox" />

        <Button
            android:id="@+id/button_radioButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura"

            android:clickable="true"
            android:onClick="selecionar"
            android:text="@string/main_button_radioButton" />

        <Button
            android:id="@+id/button_spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura"

            android:clickable="true"
            android:onClick="selecionar"
            android:text="@string/main_button_spinner" />

        <Button
            android:id="@+id/button_imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura"

            android:clickable="true"
            android:onClick="selecionar"
            android:text="@string/main_button_image" />

        <Button
            android:id="@+id/button_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura"
            android:text="@string/main_button_recyclerView"

            android:clickable="true"
            android:onClick="selecionar"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura"
            android:text="Button3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura"
            android:text="Button4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/altura"
            android:text="Button5" />


    </LinearLayout>



</ScrollView>